--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,700');
 
-$hbc-font-family-01: 'Crete Round', sans-serif;
+$hbc-font-family-01: 'Oswald', sans-serif;
 $hbc-font-family-02: 'open sans', sans-serif;
 
 $type-styles: (
