changed search script to show matching results on user input

--- a/_includes/header-search.html
+++ b/_includes/header-search.html
@@ -1,4 +1,3 @@
-<form class="header-search" action="{{ site.url }}{{ site.baseurl }}/search.html" method="get">
-  <input type="text" id="search-box" placeholder="Search" name="query">
-  <input type="submit" value="search">
+<form class="header-search" action>
+  <input type="text" id="search-input" placeholder="Search" name="query">
 </form>
