--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -16,6 +16,12 @@
 		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
 	    max-height: 60vh;
 	    overflow: hidden;
+        
+        &:hover {
+        	.feature-image {
+        		transform: scale(1.02);
+        	}
+        }
 
 		// these are overrides. defaults are set in _article-snippet.scss
 		.feature-image__link {
@@ -28,6 +34,7 @@
 		.feature-image {
 		    width: 100%;
 	        align-self: center;
+            transition: transform 400ms cubic-bezier(0.2, 1, 1, 1);
 		}
 
 		.snippet__title {
@@ -35,6 +42,7 @@
 		    grid-row: 5/6;
 			margin: 0 0 30px 0;
 			@include render-type-style(headline-3, $type-styles);
+		    z-index: 1;
 
 			&__link {
 				padding: 0 10px 0 10px;
@@ -56,6 +64,7 @@
 		    padding: 0 10px;
 		    width: fit-content;
 			background-color: $hbc-white;
+			z-index: 1;
 		}
 	}
 
