--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -20,7 +20,7 @@
         width: 75px;
 		background-color: black;
 	    padding: 9px;
-	    margin-left: $content-side-margins;
+	    // margin-left: $content-side-margins;
         transition: all 200ms ease-out;
 
 		.hbc-tech-logo{
