--- a/_includes/header-subpage.html
+++ b/_includes/header-subpage.html
@@ -32,5 +32,6 @@
 	        {% endif %}
         {% endif %}
     </p>
+    {% include header-search.html %}
     {% include navigation.html %}
 </header>
