--- a/_includes/js.html
+++ b/_includes/js.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/main.js"></script>
 <!-- these scripts are only for the code.gilt.com page -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/get-gh-repos.js"></script>
 
 
 {% if site.owner.google.analytics %}
