--- a/assets/sass/components/_featured-topics.scss
+++ b/assets/sass/components/_featured-topics.scss
@@ -27,7 +27,8 @@
 	}
 
 	&__view-all-link {
-		color: $hbc-gray;
+		color: $hbc-highlight;
+		@include render-type-style(slug-1, $type-styles);
 		@include special-text-link();
 	}
 
