--- a/_includes/article-snippet.html
+++ b/_includes/article-snippet.html
@@ -5,7 +5,7 @@
     
     {% if showFeatureImage == true  %}
         {% if post.image.feature %}
-            <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}"><img class="snippet__feature-image" src=
+            <a class="snippet__feature-image__link" href="{{ site.url }}{{ site.baseurl }}{{ post.url }}"><img class="snippet__feature-image" src=
             {% if post.image.feature contains 'http' %}
             "{{ post.image.feature }}"
             {% else %}
@@ -24,11 +24,7 @@
     </a>
     </h1>
     <div class="snippet__meta">
-        <span class="meta__day">{{ post.date | date: "%-d" }}</span>
-        <span class="meta__month">{{ post.date | date: "%b" | upcase }}</span>
-        <span class="meta__year">{{ post.date | date: "%Y" }}</span>
-
-        {% if post.categories.size > 0 %}
+    {% if post.categories.size > 0 %}
         {% assign pTitle = page.title | downcase %}
         {% assign pCat = post.categories.first %}
         {% if pCat != pTitle %}
@@ -43,12 +39,13 @@
             {% else %}
                 <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
             {% endif %}
-        {% endif %}
-        {% endif %}
-
-        {% if post.author != page.name %}
-        {% if post.author != '' %}
+            
             <span class="slug-divider"></span>
+        {% endif %}
+    {% endif %}
+
+    {% if post.author != page.name %}
+        {% if post.author != '' %}
             <span class="meta__author">
             {% for authorName in post.author %}
                 {% assign authorLink = authorName | replace: ' ', '-' | downcase %}
@@ -72,13 +69,20 @@
                 {% endunless %}
             {% endfor %}
             </span>
+            <span class="slug-divider"></span>
         {% endif %}
-        {% endif %}
+    {% endif %}
+    {% if page.date %}
+        <span class="meta__date">{{ page.date | date: "%b %-d %Y" | upcase }}</span>
+        {% elsif post.date %}
+        <span class="meta__date">{{ post.date | date: "%b %-d %Y" | upcase }}</span>
+    {% endif %}
     </div>
     {% if post.excerpt and showExcerpt == true %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__excerpt__link" title="{{ post.title }}">
-        <p class="snippet__excerpt">
-        {{ post.excerpt | strip_html | truncatewords: 70 }}
+            <p class="snippet__excerpt">
+            {{ post.excerpt | strip_html | truncatewords: 70 }}
+            </p>
+        </a>
     {% endif %}
-    </p></a>
 </section>
