--- a/_includes/recirc.html
+++ b/_includes/recirc.html
@@ -1,5 +1,5 @@
 <aside class="recirc">
-    <h2 class="header__title">Recent Insights</h2>
+    <h2 class="header__title">Recent Insights</h2><span class="slug-divider"></span>
     <a class="header__view-all-link" href="{{ site.url }}{{ site.baseurl }}/categories/index.html">See All</a>
     <div class="recirc__articles">
     {% assign counter = 0 %}
