--- a/assets/sass/components/_article-snippet.scss
+++ b/assets/sass/components/_article-snippet.scss
@@ -18,11 +18,6 @@
 		}
 	}
 	
-
-	&__feature-image {
-		margin-bottom: 20px;
-	}
-	
 	&__title {
 		margin: 0 0 10px 0;
 
@@ -38,21 +33,19 @@
 
 	&__meta {
 		color: $hbc-gray;
+	    display: inline-flex;
+        align-items: baseline;
 
 		.meta {
 
-			&__day,
-			&__month,
-			&__year {
-				display: none;
-			}
-
 			&__category-link {
 				color: $hbc-highlight;
-
 				@include render-type-style(slug-1, $type-styles);
 				@include special-text-link();
+			}
 
+			&__date {
+				@include render-type-style(slug-2, $type-styles);
 			}
 
 			&__author {
@@ -67,7 +60,6 @@
 			}
 
 			&__author-job-title {
-				color: $hbc-gray;	
 				@include render-type-style(label-2, $type-styles);			
 			}
 		}
