--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -113,28 +113,12 @@
 		    	&__category {
 					text-transform: uppercase;
 					color: $hbc-highlight;
-				    font-size: 15px;
-				    font-family: $hbc-font-family-01;
-				    font-weight: 400;
-
+					@include render-type-style(slug-1, $type-styles);
 					@include special-text-link();
 				}
 
 				&__title {
-					font-size: 17px;
-				    font-family: $hbc-font-family-01;
-				    font-weight: 400;
-
-					&:before {
-						display: inline-block;
-						position: relative;
-						content: "";
-						height: 20px;
-						top: 5px;
-						border-right: solid 1px $hbc-border;
-						margin-left: 15px;
-						margin-right: 17px;
-					}
+					@include render-type-style(subhead-3, $type-styles);
 				}
 			}
 		}
