--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -1,70 +1,60 @@
 // insights page
 .article-listing {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: min-content;
-	grid-template-areas: "featured" "sub-featured" "remaining";
-	margin: auto;
-	max-width: $content-width;
 
 	&__featured {
-		display: grid;
-		grid-area: featured;
-		grid-template-columns: $content-side-margins minmax(auto, $content-width) $content-side-margins;
-		grid-template-rows: repeat(4, 1fr);
-	    margin: auto;
-		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
-	    max-height: 60vh;
-	    overflow: hidden;
-        
-        &:hover {
-        	.feature-image {
-        		transform: scale(1.01);
-        	}
-        }
+		max-width: $content-width;
+		margin: auto;
 
-		// these are overrides. defaults are set in _article-snippet.scss
-		.feature-image__link {
-		    display: flex;
-			grid-column: 1 / 4;
-		    grid-row: 1 / 10;
+		.snippet {
+			display: grid;
+			grid-area: featured;
+			grid-template-columns: $content-side-margins minmax(auto, $content-width) $content-side-margins;
+			grid-template-rows: 1fr;
+		    margin: auto;
+			margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
+		    max-height: 60vh;
 		    overflow: hidden;
-		}
 
-		.feature-image {
-		    width: 100%;
-	        align-self: center;
-            transition: transform 400ms cubic-bezier(0.2, 1, 1, 1);
-		}
+			&__feature-image__link {
+				display: flex;
+				grid-column: 1 / 4;
+			    grid-row: 1 / 8;
+			    overflow: hidden;
+			}
 
-		.snippet__title {
-			grid-column: 2 / 3;
-		    grid-row: 5/6;
-			margin: 0 0 30px 0;
-			@include render-type-style(headline-2, $type-styles);
-		    z-index: 1;
+		    &__feature-image {
+			    width: 100%;
+		        align-self: center;
+	            transition: transform 400ms cubic-bezier(0.2, 1, 1, 1);
+			}
 
-			&__link {
-				padding: 0 10px 0 10px;
-			    box-decoration-break: clone;
-			    background-color: white;
-				text-decoration: none;
-			
-				&:hover {
-					color: $hbc-highlight;
+			&__title {
+				grid-column: 2 / 3;
+			    grid-row: 3/4;
+				margin: 0 0 30px 0;
+				@include render-type-style(headline-2, $type-styles);
+			    z-index: 1;
+
+				&__link {
+					padding: 0 10px 0 10px;
+				    box-decoration-break: clone;
+				    background-color: white;
+					text-decoration: none;
+				
+					&:hover {
+						color: $hbc-highlight;
+					}
 				}
 			}
-		}
 
-
-		.snippet__meta {
-			grid-column: 2 / 3;
-		    grid-row: flex-end / flex-end;
-
-		    padding: 0 10px;
-		    width: fit-content;
-			background-color: $hbc-white;
-			z-index: 1;
+			&__meta {
+				grid-column: 2 / 3;
+			    grid-row: 4 / 4;
+			    padding: 5px 10px 0 10px;
+			    width: fit-content;
+				background-color: $hbc-white;
+				z-index: 1;
+			}
 		}
 	}
 
@@ -94,7 +84,7 @@
 	&__remaining  {
 		grid-area: remaining;
 		grid-template-columns: 1fr;
-		grid-auto-rows: repeat(12, minmax(100px, auto));
+		grid-template-rows: repeat(3, minmax(100px, auto));
 	    grid-template-areas:
 	    "art"
 	    "pg"
@@ -143,11 +133,14 @@
 	@include media('>=medium') {
 
 		&__featured {
-			grid-template-columns: minmax($content-side-margins-large, 1fr) minmax(auto, $content-width) minmax($content-side-margins-large, 1fr);
-			margin: auto ($content-side-margins-large*-1) auto ($content-side-margins-large*-1);
+			
+			.snippet {
+				grid-template-columns: minmax($content-side-margins-large, 1fr) minmax(auto, $content-width) minmax($content-side-margins-large, 1fr);
+				margin: auto ($content-side-margins-large*-1) auto ($content-side-margins-large*-1);
 
-			.snippet__title {
-				@include render-type-style(headline-1, $type-styles);
+				.snippet__title {
+					@include render-type-style(headline-1, $type-styles);
+				}
 			}
 		}
 	}
@@ -212,6 +205,12 @@
 		&__featured {
 		    margin: auto;
 	    	max-height: 600px;
+        
+	        &:hover {
+	        	.snippet__feature-image {
+	        		transform: scale(1.01);
+	        	}
+	        }
 
 			.snippet__title {
 				@include render-type-style(headline-1, $type-styles);
