--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -1,36 +1,30 @@
 .navigation {
     grid-area: nav;
     display: inline-flex;
-    margin: 0;
+    margin-left: auto;
+    margin-right: 20px;
     padding: 0;
     align-self: center;
     pointer-events: auto;
 
-    &__link {
-		background-color: rgba($hbc-white, 0.8);
+	&__menu-icon {
+		// background-color: rgba($hbc-white, 0.8);
 	    border-radius: 100%;
-		padding: 10px;
-	    width: 50px;
-	    height: 49px;
-	    z-index: 1000;
+	    width: 30px;
+	    height: 30px;
+	    overflow: visible !important;
 
-		&__svg-icon {
-		    width: 30px;
-		    height: 30px;
-		    overflow: visible !important;
+	    .bar {
+	    	position: relative;
+			stroke: black;
+			stroke-width: 2px;
+			stroke-linecap: round;
+			transform-origin: 48% 48%;
+		    transition: all 200ms ease-out;
+	    }
+	}
 
-		    .bar {
-		    	position: relative;
-				stroke: black;
-				stroke-width: 2px;
-				stroke-linecap: round;
-				transform-origin: 48% 48%;
-			    transition: all 200ms ease-out;
-		    }
-		}
-    }
-
-    .menu-overlay {
+    .menu {
     	position: absolute;
     	display: grid;
 		grid-template-columns: 1fr $content-width 1fr;
@@ -63,46 +57,39 @@
     }
 
 
-    @include media('>medium') {
-    	&__link {
-			background-color: transparent;
-		}
-    }
+
 
     &--open {
 
-		.navigation__link {
-		 	background-color: transparent;
+	 	.navigation__menu-icon {
+		 	// background-color: transparent;
 
-		 	&__svg-icon {
+	 		.bar {
 
-		 		.bar {
+			 	&__top {
+					// d: path("M0,5 L30,5");
+					transform: scaleX(.5) translateY(5px);
+					opacity: 0;
+				}
 
-				 	&__top {
-						// d: path("M0,5 L30,5");
-						transform: scaleX(.5) translateY(5px);
-						opacity: 0;
-					}
+				&__cross-1 {
+					d: path("M-5,14 L35,14");
+		    	    transform: rotate(45deg);
+				}
 
-					&__cross-1 {
-						d: path("M-5,14 L35,14");
-			    	    transform: rotate(45deg);
-					}
+				&__cross-2 {
+					d: path("M-5,14 L35,14");
+					transform: rotate(-45deg);
+				}
 
-					&__cross-2 {
-						d: path("M-5,14 L35,14");
-						transform: rotate(-45deg);
-					}
-
-					&__bottom {
-						transform: scaleX(.5) translateY(-5px);
-						opacity: 0;
-					}
+				&__bottom {
+					transform: scaleX(.5) translateY(-5px);
+					opacity: 0;
 				}
 			}
 		}
 
-		.menu-overlay {
+		.menu {
 		    visibility: visible;
 			opacity: 1;
 			pointer-events: auto;
@@ -110,8 +97,50 @@
 		}
     }
 
+    @include media('>=medium') {
+
+	 	&__menu-icon {
+		 	display: none;
+		}
+
+	    .menu {
+	    	position: relative;
+	    	display: inline-flex;
+			grid-template-columns: 1fr;
+	    	height: auto;
+		    width: 100%;
+	    	background-color: white;
+		    top: 0;
+		    left: 0;
+		    opacity: 1;
+		    visibility: visible;
+		    margin: auto;
+		    padding: 0;
+		    transition: all 200ms ease-out;
+		    z-index: 1;
+
+		    .link-list {
+			    list-style-type: none;
+			    max-width: $content-width;
+			    margin: auto;
+			    padding: 0;
+
+			    &__link-item {
+		    		margin: 0 20px;
+			    	display: inline-flex;
+			    }
+
+		    	&__link {
+		    		color: $hbc-black;
+					@include render-type-style(subhead-1, $type-styles);
+					@include special-text-link();
+		    	}
+		    }
+	    }
+    }
+
     @include media('>=large') {
-    	&__link__svg-icon:hover {
+    	&__menu-icon:hover {
 
 	    	.bar {
 			    transition: all 150ms ease-out;
