--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -17,7 +17,7 @@ layout: sub-page
             {% endif %}
         {% endif %}
             <span class="article-meta__date">
-                Published {{ page.date | date: "%b %-d %Y" | upcase }}
+                Published {{ page.date | date: "%b %-d, %Y" | upcase }}
             </span>
         </div>
         <h1 class="article__content__title" title="{{ page.title }}">{{ page.title }}</h1>
