--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -2,6 +2,7 @@
     grid-area: ft;
 	color: lighten($hbc-black, 50%);
 	padding: 40px 40px;
+	margin-top: 80px;
 	border-top: solid 1px $hbc-border;
 	display: flex;
 	position: relative;
