added careers page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,4 +37,5 @@
 @import '../sass/pages/authors-page';
 @import '../sass/pages/code-page';
 @import '../sass/pages/about-page';
+@import '../sass/pages/careers-page';
 @import '../sass/pages/search-results';
