--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -3,14 +3,15 @@
     grid-area: hd;
     display: grid;
     grid-auto-rows: 1fr;
-	grid-template-columns: 80px 1fr 1fr;
-	grid-template-areas: "logo meta search nav";
+	grid-template-columns: 80px 1fr 60px 60px;
+	grid-template-areas: "logo . search nav";
 	color: $hbc-black;
     z-index: 100;
     transition: all 100ms ease-out;
     width: 100%;
     pointer-events: none;
     position: absolute;
+    // overflow-x: hidden;
 
 	&__logo {
 	    grid-area: logo;
@@ -60,6 +61,7 @@
    	// medium
 	@include media('>=medium') {
 		position: absolute;
+		grid-template-columns: 80px 1fr 500px 60px;
 		grid-template-areas: "logo meta nav search";
 
 		&__logo {
@@ -72,6 +74,7 @@
    	// medium
 	@include media('>=medium', 'landscape') {
 		margin-top: 0;
+		grid-template-columns: 80px 1fr 500px 60px;
 		grid-template-areas: "logo meta nav search";
 	}
 
