--- a/assets/sass/pages/_about-page.scss
+++ b/assets/sass/pages/_about-page.scss
@@ -8,9 +8,10 @@
 		height: 350px;
 		max-width: 100vw;
 	    max-height: 40vh;
-		background-color: black;
 	    overflow: hidden;
 	    align-items: center;
+	    @include background-gradient();
+	    background-blend-mode: multiply;
 	    
 		.about-page__title {
 			grid-column: 1 / 2;
