--- a/assets/sass/pages/_code-page.scss
+++ b/assets/sass/pages/_code-page.scss
@@ -1,19 +1,135 @@
 .code-page {
 
-    .repos-container {
+    &__header {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
+        height: 250px;
+        max-width: 100vw;
+        max-height: 40vh;
+        overflow: hidden;
+        align-items: center;
+        @include background-gradient();
+        
+        .code-page__title {
+            grid-column: 1 / 2;
+            grid-row: 1 / 2;
+            text-transform: uppercase;
+            color: white;
+            margin: auto;
+            align-self: center;
+            max-width: $content-width;
+            z-index: 1;
+        }
+    }
+
+    &__projects {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: $content-width;
+        margin: 80px auto 40px auto;
+
+        .gilt-api,
+        .styleguide {
+            display: flex;
+            width: 100%;
+            height: 230px;
+            margin-bottom: 40px;
+            max-height: calc(90vw - 20px);
+            border: solid 1px $hbc-border;
+
+            &:hover {
+                background-color: #f5f5f5;
+            }
+
+            &__logo {
+                max-height: 40%;
+                margin: auto;
+            }
+        }
+    }
+
+    &__repos {
+        max-width: $content-width;
+        margin: auto;
+        display: grid;
+        grid-template-columns: 1fr;
         grid-auto-rows: minmax(50px, auto);
         grid-gap: 20px;
 
-        @media screen and (max-width: $breakpoint-medium) {
-            grid-template-columns: 1fr;
+        .repos-title {
+            margin: 0;
+            align-self: flex-end;
+            @include render-type-style(subhead-1, $type-styles);
         }
 
         .repo-row {
             display: flex;
             flex-direction: column;
         }   
+    }
+
+
+    // small landscape
+    @include media('>=small', 'landscape') {
+        &__header {
+            max-height: 70vh;
+        }
+    }
+
+    // medium
+    @include media('>=medium') {
+        &__header {
+            max-height: 60vh;
+            margin: 0 ($content-side-margins-large*-1) 0 ($content-side-margins-large*-1);
+        }
+
+        &__projects {
+            .gilt-api {
+                height: 330px;
+                margin-right: 20px;
+                width: calc(100%/2 - 20px)
+            }
+            .styleguide {
+                height: 330px;
+                margin-left: 20px;
+                width: calc(100%/2 - 20px)
+            }
+        }
+
+        &__repos {
+            grid-template-columns: repeat(3, 1fr);
+
+            .repos-title {
+                grid-column: 1/4;
+            }
+        }
+    }
+
+    // large
+    @include media('>=large') {
+        &__header {
+            margin: auto;
+        }
+
+        // reveal animations
+        &__projects,
+        &__header {
+            position: relative;
+            top: 200px;
+            opacity: 0;
+
+            &--reveal {
+                animation-name: reveal-article;
+                animation-duration: 0.6s;
+                animation-timing-function: cubic-bezier(0.000, 0.980, 0.655, 0.995); 
+                animation-direction: normal;
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+            }
+        }
     }
 
     // old styles from code.gilt.com repo
@@ -119,8 +235,6 @@
     /* ENG Gilt Tech Common Header Style */
 
     #loading {
-        margin: 0 auto;
-        text-align: center;
     }
 
     .networkError {
@@ -176,7 +290,7 @@
         font-size: 12px;
         color: #fff;
         border: solid 1px $hbc-border;
-        border-radius: 0 0 0 10px;
+        border-radius: 0;
     }
 
     .count {
