--- a/assets/sass/pages/_article-page.scss
+++ b/assets/sass/pages/_article-page.scss
@@ -1,12 +1,75 @@
 .article {
 
+	&__header {
+		display: grid;
+	    // grid-template-columns: 1fr;
+		grid-template-columns: $content-side-margins minmax(auto, $content-width) $content-side-margins;
+	    grid-template-rows: 1fr;
+		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
+		height: 350px;
+		max-width: 100vw;
+	    max-height: 40vh;
+	    overflow: hidden;
+	    @include background-gradient();
+	    background-blend-mode: multiply;
+
+	    .header-title {
+		    grid-column: 2 / 2;
+		    grid-row: 1 / 2;
+			color: $hbc-white;
+		    line-height: 110%;
+		    margin: 10px 0 10px -2px;
+			z-index: 1;
+			align-self: end;
+			@include render-type-style(headline-2, $type-styles);
+	    }
+
+		.hero-image {
+		    grid-column: 1 / 2;
+		    grid-row: 1 / 4;
+	        align-self: center;
+	        display: flex;
+	        width: 100vw;
+		    // position: relative;
+		    // left: 50%;
+		    // transform: translateX(-50%);
+	     //    width: 100%;
+	     //    min-height: 100%;
+	     //    max-width: 2880px;
+		    overflow: hidden;
+		    opacity: 0.5;
+        }
+
+		.article-meta {
+		    grid-column: 2 / 2;
+		    grid-row: 3 / 4;
+			align-self: end;
+			margin-bottom: $content-side-margins;
+			z-index: 1;
+
+			&__category {
+				background-color: $hbc-white;
+				padding: 3px;
+				margin-right: 5px;
+				color: $hbc-highlight;
+			    @include render-type-style(slug-1, $type-styles);
+				@include special-text-link();
+			}
+
+			&__date {
+				color: $hbc-white;
+			    @include render-type-style(label-2, $type-styles);
+			}
+		}
+	}
+
 	&__content {
+		max-width: $content-width;
+		margin: auto;
 		display: grid;
 	    grid-auto-rows: minmax(20px, auto);
 		grid-template-columns: 1fr;
 	    grid-template-areas:
-		    "meta"
-		    "title"
 		    "read-time"
 		    "body"
 		    "share"
@@ -16,45 +79,10 @@
 		position: relative;
         margin-bottom: 80px;
 
-		.article-meta {
-			grid-area: meta;
-		    font-family: Oswald;
-
-			&__category {
-				color: $hbc-highlight;
-
-			    @include render-type-style(slug-1, $type-styles);
-				@include special-text-link();
-			}
-
-			&__date {
-				color: $hbc-gray;
-			    @include render-type-style(label-2, $type-styles);
-
-				&:before {
-					display: inline-block;
-					position: relative;
-					content: "";
-					height: 20px;
-					top: 5px;
-					border-right: solid 1px $hbc-border;
-					margin-left: 10px;
-					margin-right: 10px;
-				}
-			}
-		}
-
-		&__title {
-			grid-area: title;
-			@include render-type-style(headline-3, $type-styles);
-		    line-height: 110%;
-		    margin: 10px 0 0 -3px;
-		}
-
 		&__read-time {
 			grid-area: read-time;
 			align-self: start;
-			margin-top: 24px;
+			margin-top: 20px;
 			color: $hbc-gray;
 
 			.read-time__text-1,
@@ -131,6 +159,11 @@
 		}
 	}
 
+
+	.recirc {
+		margin: auto;
+	}
+
 	// small portrait
 	@include media('>small', 'portrait') {
 
@@ -156,21 +189,26 @@
 	}
 
 	// medium
-	@include media('>medium') {
+	@include media('>=medium') {
 
+		&__header {
+			grid-template-columns: minmax($content-side-margins-large, 1fr) minmax(auto, $content-width) minmax($content-side-margins-large, 1fr);
+			margin: auto ($content-side-margins-large*-1) auto ($content-side-margins-large*-1);
+
+		    .header-title {
+				@include render-type-style(headline-1, $type-styles);
+			}
+		}
+
+		
 		&__content {
 			grid-template-columns: 90px 1fr;
 			grid-template-areas:
-			"meta meta"
-			"title title"
 			"read-time body"
 			"share body"
 			". body"
 			". footer";
 
-		    &__title {
-				@include render-type-style(headline-1, $type-styles);
-			}
 
 			&__share-buttons {
 				width: 100%;
@@ -216,6 +254,13 @@
 					margin-bottom: 0;
 				}
 			}
+		}
+	}
+
+	// large
+	@include media('>=large') {
+		&__header {
+			margin: auto;
 		}
 	}
 }
